--- a/hw-2/task2/index.html
+++ b/hw-2/task2/index.html
@@ -26,7 +26,7 @@
 					<div class="center dark">
 						<h5><span>Imd</span>b Pro</h5>
 					</div>
-					<div class="center dark">
+					<div class="center dark text">
 						<h5 class="text"><span>Imd</span>b Resume</h5>
 					</div>
 				</div>
@@ -114,8 +114,8 @@
 				<div class="center dark">
 					<h3>Tops at the Box Office</h3>
 				</div>
-				<div class="center dark">
-					<h3 class="text">Opening This Week</h3>
+				<div class="center dark text">
+					<h3>Opening This Week</h3>
 				</div>
 			</div>
 				
@@ -127,8 +127,8 @@
 				<div class="center dark">
 					<h3>Photo Gallery</h3>
 				</div>
-				<div class="center dark">
-					<h3 class="text">Birthdays</h3>
+				<div class="center dark text">
+					<h3>Birthdays</h3>
 				</div>
 			</div>
 
