changed teg section to main

--- a/hw-2/task2/index.html
+++ b/hw-2/task2/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	
-	<section>
+	<header>
 		<div class="container ">
 			
 			<div class="center uppercase light">
@@ -38,7 +38,7 @@
 			</div>
 
 		</div>
-	</section>
+	</header>
 
 	<nav> 
 		<ul class="container dark">
@@ -47,8 +47,7 @@
 				</li>
 				<li class="center uppercase">			
 					<h3>TV</h3>
-				</li>
-				<li class="center uppercase">
+				</main	<li class="center uppercase">
 					<h3>News</h3>
 				</li>
 				<li class="center uppercase">					
@@ -61,7 +60,7 @@
 	</nav>
 
 	
-	<section>
+	<main>
 		<div class="search">
 
 			<form>
@@ -72,10 +71,10 @@
 			</form>
 
 		</div>
-	</section>
+	</main>
 
 	
-	<section>
+	<main>
 		<div class="gallary" >
 		
 			<div class="gallary-header" >
@@ -103,11 +102,11 @@
 			</div>
 
 		</div>
-	</section>
+	</main>
 
 
 
-	<section>
+	<main>
 		<div class="container gallary-line-2">
 			
 			<div class="column">
@@ -133,11 +132,11 @@
 			</div>
 
 		</div>
-	</section>
+	</main>
 
 
 
-	<section>
+	<footer>
 		<div class="container">
 			
 			<div class="center light">
@@ -153,7 +152,7 @@
 			</div>
 
 		</div>
-	</section>
+	</footer>
 
 
 
