--- a/hw-2/task4/index.html
+++ b/hw-2/task4/index.html
@@ -14,7 +14,7 @@
 		<img src="hamburger_icon.svg.png">
 	</header>
 
-	<section>
+	<main>
 
 		<div class="column-left center">
 			Left Side Navigation panel
@@ -29,7 +29,7 @@
 		</div>
 
 
-	</section>
+	</main>
 
 </body>
 </html>
