--- a/hw-2/task5/index.html
+++ b/hw-2/task5/index.html
@@ -44,7 +44,7 @@
 		</div>
 	</header>
 
-	<section>
+	<main>
 		<div class="container ">
 			<div class=" row justify-content-between">
 				
@@ -150,7 +150,7 @@
 			</div>
 		</div>
 
-	</section>
+	</main>>
 
 	<footer >
 		<div class="container  element-1">
